# thordata-web-qa-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  web_qa_agent.py
.github/workflows/: ci.yml
scripts/: run_openrouter_scenarios.py  run_openrouter_smoke.py
src/thordata_web_qa_agent/: __init__.py  agent.py  cli.py  llm.py
test/: test_web_qa_agent_offline_e2e.py
tests/: test_llm_backend_selection.py  test_web_qa_agent_e2e_no_llm.py
